MarcoKitTests/TestData/error/truefalse.marco
--before
[truefalse]

--after
5: Whitespace required between array entries
